# BOSS

./: .gitignore  CMakeLists.txt  Makefile  Makefile_emscripten  README.md  TODO.txt  TechTree.json  build.bat  build.sh
emscripten/: BuildOrderPlotter.js  BuildOrderSelector.js  index.html
src/: ActionSet.cpp  ActionSet.h  ActionType.cpp  ActionType.h  ActionTypeData.cpp  ActionTypeData.h  BOSS.cpp  BOSS.h  BOSSAssert.cpp  BOSSConfig.cpp  BOSSConfig.h  BOSSExperiments.cpp  BOSSExperiments.h  BOSSParameters.h  BOSSPlotBuildOrders.cpp  BuildOrder.cpp  BuildOrder.h  BuildOrderPlot.cpp  BuildOrderPlot.h  BuildOrderPlotData.cpp  BuildOrderPlotData.h  BuildOrderPlotter.cpp  BuildOrderPlotter.h  BuildOrderSearchGoal.cpp  BuildOrderSearchGoal.h  CombatSearch.cpp  CombatSearch.h  CombatSearchExperiment.cpp  CombatSearchExperiment.h  CombatSearchParameters.cpp  CombatSearchParameters.h  CombatSearch_BestResponse.cpp  CombatSearch_BestResponse.h  CombatSearch_BestResponseData.cpp  CombatSearch_BestResponseData.h  CombatSearch_Bucket.cpp  CombatSearch_Bucket.h  CombatSearch_BucketData.cpp  CombatSearch_Integral.cpp  CombatSearch_Integral.h  (+24 more)
src/BOSS/: ActionSet.cpp  ActionSet.h  ActionType.cpp  ActionType.h  ActionTypeData.cpp  ActionTypeData.h  BOSS.h  BOSSAssert.cpp  BOSSAssert.h  BOSSConfig.cpp  BOSSConfig.h  BuildOrder.cpp  BuildOrder.h  BuildOrderPlotter.cpp  BuildOrderPlotter.h  Common.cpp  FileTools.cpp  GameState.cpp  GameState.h  JSONTools.cpp  JSONTools.h  Position.hpp  Tools.cpp  Unit.cpp  Unit.h
src/emscripten/: ExternalInterface.cpp
src/experiments/: AStarSearchExperiment.cpp  AStarSearchExperiment.h  BOSSExperiments.cpp  BOSSExperiments.h  CombatSearchExperiment.cpp  CombatSearchExperiment.h  DFBBSearchExperiment.cpp  DFBBSearchExperiment.h  MonteCarloTreeSearchExperiment.cpp  MonteCarloTreeSearchExperiment.h
src/json/: json.hpp
src/old/: ActionCountSet.cpp  ActionCountSet.h  combatsearchexperiment.h
src/search/: AStarBuildOrderSearch.cpp  AStarBuildOrderSearch.h  ActionOrdering.hpp  BFS_BuildOrderSearch.cpp  BFS_BuildOrderSearch.h  BuildOrderSearch.cpp  BuildOrderSearch.h  BuildOrderSearchGoal.cpp  BuildOrderSearchResults.cpp  BuildOrderSearchResults.h  CombatSearch.cpp  CombatSearch.h  CombatSearchParameters.cpp  CombatSearchResults.cpp  CombatSearchResults.h  CombatSearch_BestResponse.h  CombatSearch_BestResponseData.cpp  CombatSearch_Bucket.h  CombatSearch_BucketData.cpp  CombatSearch_BucketData.h  CombatSearch_Integral.cpp  CombatSearch_Integral.h  CombatSearch_IntegralData.h  DFBB_BuildOrderSearchParameters.cpp  DFBB_BuildOrderSearchParameters.h  DFBB_BuildOrderSearchResults.cpp  DFBB_BuildOrderSearchResults.h  DFBB_BuildOrderSmartSearch.cpp  DFBB_BuildOrderSmartSearch.h  DFBB_BuildOrderStackSearch.cpp  DFBB_BuildOrderStackSearch.h  MonteCarloTreeSearch.cpp  MonteCarloTreeSearch.h  NaiveBuildOrderSearch.cpp
src/sfml/: main_sfml.cpp
vs/: BOSS.sln  BOSS.vcxproj  BOSS.vcxproj.filters  BOSS_experiments.vcxproj  BOSS_main.vcxproj  BOSS_sfml.vcxproj  BOSS_test.vcxproj
(+39 files in other folders)
